[package]
name = "crossfire"
version = "1.1.0"
authors = ["plan <frostyplanet@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/frostyplanet/crossfire-rs"
readme = "README.md"
repository = "https://github.com/frostyplanet/crossfire-rs"
documentation = "https://docs.rs/crossfire"
keywords = ["async", "non-blocking", "lock-free", "channel"]
categories = ["concurrency", "data-structures"]
exclude = ["/ci/*", "/bors.toml"]
description = "channels for async and threads"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
futures = "0.3"
enum_dispatch = "0.3"
async-trait = "0"

[dev-dependencies]
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread", "rt", "macros"] }
rand = "0.7.3"
rstest = "0"
log = "0"
captains-log = "0"
