[package]
name = "crossfire"
version = "2.0.2"
authors = ["plan <frostyplanet@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/frostyplanet/crossfire-rs"
readme = "README.md"
repository = "https://github.com/frostyplanet/crossfire-rs"
documentation = "https://docs.rs/crossfire"
keywords = ["async", "non-blocking", "lock-free", "channel"]
categories = ["concurrency", "data-structures"]
exclude = ["/ci/*", "/bors.toml"]
description = "channels for async and threads"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8"
futures = "0.3"
enum_dispatch = "0.3"
async-trait = "0"
lazy_static = "1.4"

[dev-dependencies]
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread", "rt", "macros"] }
rand = "0.9"
rstest = "0"
log = "0"
captains-log = "0"
atomic-waitgroup = "0"
criterion = { version="0.6", features = ["async_tokio", "csv_output"] }
crossbeam-channel = "0.5"

flume = {version="0.11", features= ["async"] }
kanal = {version="0.1"}

[features]
default = []
profile = []

[[bench]]
name = "crossfire"
harness = false

[[bench]]
name = "crossbeam"
harness = false

[[bench]]
name = "flume"
harness = false

[[bench]]
name = "kanal"
harness = false

[[bench]]
name = "tokio"
harness = false

[[bench]]
name = "inner"
harness = false
